# stss

./: README.md  pyproject.toml  setup.py
st2ss/: st.py  st2d.py  st3d.py  util.py
structure_tensor/: st2d.py  st3d.py
stss/: st.py  st2d.py  st2d_cupy.py  st3d.py  st3d_cupy.py  st_cupy.py  util.py  util_cupy.py
tests/: test_structure_tensor.py
